crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/cyclic_inheritance/self_inheritance/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Circular inheritance is not allowed.
   ╭─[input.sol:4:1]
   │
 4 │ contract A is A {}
   │ ─────────┬────────  
   │          ╰────────── Error occurred here.
───╯
